# doc-insight-local

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yaml  dockerfile  ingest.py  pyproject.toml
core/: config.py  rag_pipeline.py  reader.py  utils.py
experiments/: agent.py
tests/: eval_dataset.json  evaluate.py
