[project]
name = "doc-insight-local"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12 <4.0.0"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "chromadb (>=1.3.7,<2.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "pypdf (>=6.5.0,<7.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
